name:                route
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/route
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/route.git

library
  exposed-modules:
    Data.Route
    Data.Route.Usage.FHS
    Data.Route.Usage.URI
  build-depends: base, free
  default-language: Haskell2010
  default-extensions:
    DataKinds
    FlexibleInstances
    KindSignatures
    NoImplicitPrelude
    PackageImports
    TypeApplications
  ghc-options: -fno-warn-tabs
